feat: Updated Auth
Signed-off-by: mlobb <matej.lobb@gmail.com>

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,7 +15,6 @@ spring:
     database-platform: org.hibernate.dialect.H2Dialect
     open-in-view: false
 
-authorization:
-  tokens:
-    tokenValidityTime: 600
-    refreshTokenValidity: 3600
+logging:
+  level:
+    org.springframework.security: DEBUG
