--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
 	<properties>
 		<java.version>11</java.version>
 		<spring-security-oauth2.version>2.3.6.RELEASE</spring-security-oauth2.version>
+		<mysql-connector-java.version>8.0.17</mysql-connector-java.version>
+		<mapstruct.version>1.3.1.Final</mapstruct.version>
 	</properties>
 
 	<dependencies>
@@ -91,7 +93,21 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
+			<version>${mysql-connector-java.version}</version>
 			<scope>runtime</scope>
+		</dependency>
+
+		<!-- Mapstruct -->
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct</artifactId>
+			<version>${mapstruct.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct-processor</artifactId>
+			<version>${mapstruct.version}</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<!-- Test -->
