--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 		<spring-security-oauth2.version>2.3.6.RELEASE</spring-security-oauth2.version>
 		<mysql-connector-java.version>8.0.17</mysql-connector-java.version>
 		<mapstruct.version>1.3.1.Final</mapstruct.version>
+		<jacoco-maven-plugin-version>0.8.4</jacoco-maven-plugin-version>
 	</properties>
 
 	<dependencies>
@@ -123,6 +124,26 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>${jacoco-maven-plugin-version}</version>
+				<executions>
+					<execution>
+						<id>prepare-agent</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>jacoco-site</id>
+						<phase>install</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
