--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,6 +1,5 @@
 spring:
-  profiles:
-    active: test
+  profiles: test
   h2:
     console:
       enabled: true
@@ -10,15 +9,3 @@ spring:
     username: sa
     password:
     driver-class-name: org.h2.Driver
-  jpa:
-    show-sql: true
-    hibernate:
-      ddl-auto: validate
-    open-in-view: true
-  jackson:
-    serialization:
-      FAIL_ON_EMPTY_BEANS: false
-
-  liquibase:
-    change-log: classpath:/db/liquibase-changelog.xml
-    enabled: true
