--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 		<mysql-connector-java.version>8.0.18</mysql-connector-java.version>
 		<mapstruct.version>1.3.1.Final</mapstruct.version>
 		<jacoco-maven-plugin-version>0.8.5</jacoco-maven-plugin-version>
+		<javax.mail.version>1.6.2</javax.mail.version>
 	</properties>
 
 	<dependencies>
@@ -69,6 +70,7 @@
 		<dependency>
 			<groupId>com.sun.mail</groupId>
 			<artifactId>javax.mail</artifactId>
+			<version>${javax.mail.version}</version>
 		</dependency>
 
 		<!-- Apache -->
