--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,13 @@
 			<version>${spring-security-oauth2.version}</version>
 		</dependency>
 
+		<!-- Hibernate -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-hibernate5</artifactId>
+			<version>2.10.0.pr3</version>
+		</dependency>
+
 		<!-- Spring Dev -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
