--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 		<mapstruct.version>1.3.1.Final</mapstruct.version>
 		<jacoco-maven-plugin-version>0.8.5</jacoco-maven-plugin-version>
 		<javax.mail.version>1.6.2</javax.mail.version>
+		<newrelic-java.version>5.7.0</newrelic-java.version>
 	</properties>
 
 	<dependencies>
@@ -71,6 +72,15 @@
 			<groupId>com.sun.mail</groupId>
 			<artifactId>javax.mail</artifactId>
 			<version>${javax.mail.version}</version>
+		</dependency>
+
+		<!-- New Relic -->
+		<dependency>
+			<groupId>com.newrelic.agent.java</groupId>
+			<artifactId>newrelic-java</artifactId>
+			<version>${newrelic-java.version}</version>
+			<scope>provided</scope>
+			<type>zip</type>
 		</dependency>
 
 		<!-- Apache -->
@@ -144,6 +154,28 @@
 						<goals>
 							<goal>report</goal>
 						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>unpack-newrelic</id>
+						<phase>package</phase>
+						<goals>
+							<goal>unpack-dependencies</goal>
+						</goals>
+						<configuration>
+							<includeGroupIds>com.newrelic.agent.java</includeGroupIds>
+							<includeArtifactIds>newrelic-java</includeArtifactIds>
+							<overWriteReleases>false</overWriteReleases>
+							<overWriteSnapshots>false</overWriteSnapshots>
+							<overWriteIfNewer>true</overWriteIfNewer>
+							<outputDirectory>${project.basedir}</outputDirectory>
+							<destFileName>newrelic</destFileName>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
