--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,3 +19,9 @@ jobs:
       - run:
           name: Analyze on Codacy
           command: bash <(curl -Ls https://coverage.codacy.com/get.sh)
+
+workflows:
+  main:
+    jobs:
+      - build:
+          context: SonarCloud
