--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.1.RELEASE</version>
+		<version>2.3.1.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -20,10 +20,11 @@
 	<properties>
 		<java.version>14</java.version>
 		<spring-security-oauth2.version>2.3.6.RELEASE</spring-security-oauth2.version>
-		<mysql-connector-java.version>8.0.18</mysql-connector-java.version>
+		<mysql-connector-java.version>8.0.20</mysql-connector-java.version>
 		<mapstruct.version>1.3.1.Final</mapstruct.version>
 		<jacoco-maven-plugin-version>0.8.5</jacoco-maven-plugin-version>
 		<javax.mail.version>1.6.2</javax.mail.version>
+		<validation-api-version>2.0.1.Final</validation-api-version>
 	</properties>
 
 	<dependencies>
@@ -64,6 +65,13 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
+		</dependency>
+
+		<!-- Validation -->
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>${validation-api-version}</version>
 		</dependency>
 
 		<!-- Email -->
