--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 		<jacoco-maven-plugin-version>0.8.5</jacoco-maven-plugin-version>
 		<javax.mail.version>1.6.2</javax.mail.version>
 		<validation-api-version>2.0.1.Final</validation-api-version>
+		<springfox-swagger2-version>2.9.2</springfox-swagger2-version>
 	</properties>
 
 	<dependencies>
@@ -59,6 +60,25 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 			<scope>runtime</scope>
 			<optional>true</optional>
+		</dependency>
+
+		<!-- Swagger -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>${springfox-swagger2-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>${springfox-swagger2-version}</version>
+		</dependency>
+
+		<!-- Guava -->
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>20.0</version>
 		</dependency>
 
 		<!-- Lombok -->
