--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -5,7 +5,7 @@ spring:
       enabled: true
       path: /h2
   datasource:
-    url: jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=TRUE;
+    url: jdbc:h2:mem:test;DB_CLOSE_ON_EXIT=FALSE;
     username: sa
     password:
     driver-class-name: org.h2.Driver
