--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
 		<validation-api-version>2.0.1.Final</validation-api-version>
 		<springfox-swagger2-version>2.9.2</springfox-swagger2-version>
 		<awaitility-version>4.0.3</awaitility-version>
+		<guava-version>29.0-jre</guava-version>
 	</properties>
 
 	<dependencies>
@@ -79,7 +80,7 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>20.0</version>
+			<version>${guava-version}</version>
 		</dependency>
 
 		<!-- Lombok -->
